--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,2 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-
-body{
-    font-family: 'Mulish', sans-serif;;
-}
+@import '_base';
+@import '_main'
