--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -74,6 +74,7 @@ main{
         }
 
         .shop-btn{
+            @include flexCenter;
             font-size: 23px;
             padding: 13px;
             width: 230px;
@@ -83,10 +84,109 @@ main{
             cursor: pointer;
             transition: 0.3s ;
             background-color: transparent;
+            text-decoration: none;
         }
 
         .shop-btn:hover{
             background-color: $second-font-color;
+        }
+    }
+}
+
+.food-sec{
+    background-color: $main-background-page-color;
+    width: 100%;
+    padding-bottom: 60px; 
+    @include flexColumn;
+
+    h1{
+        margin: 30px 40px;
+        font-size: 2.3rem;
+
+        strong{
+            color: $second-font-color;
+        }
+    }
+
+    .food-display{
+        width: 100%;
+        flex-wrap: wrap;
+        @include flexCenter;
+    }
+
+    .meal{
+        @include flexColumn;
+        width: 350px;
+        height: 420px;
+        background-color: white;
+        border-radius: 10px;
+        margin: 20px 20px;
+
+        &-img{
+            width: 100%;
+            height: 65%;
+            background-color: beige;
+            border-radius: 10px;
+
+            img{
+                width: 100%;
+                height: 100%;
+                border-top-right-radius: 10px;
+                border-top-left-radius: 10px;
+            }
+        }
+
+        &-txt{
+            @include flexColumn;
+            justify-content: space-between;
+            width: 100%;
+            height: 35%;
+            color: black;
+
+            h3{
+                margin-top: 30px;
+                font-size: 1.2rem;
+                text-align: center;
+            }
+
+            button{
+                width: 100%;
+                font-size: 18px;
+                padding: 10px;
+                border-bottom-left-radius: 10px;
+                border-bottom-right-radius: 10px;
+                border: none;
+                background-color: $second-font-color;
+                color: white;
+                cursor: pointer;
+            }
+
+            button:hover{
+                background-color: $dark-pinkish-color;
+            }
+        }
+    }
+    
+}
+
+footer{
+    @include flexCenter;
+    color: #000000;
+    padding: 30px;
+    position: relative;
+
+    .social-links{
+        width: 80px;
+        position: absolute;
+        list-style: none;
+        @include flexCenter;
+        justify-content: space-around;
+        right: 50px;
+        top: 50%;
+        transform: translateY(-50%);
+
+        li{
+            cursor: pointer;
         }
     }
 }
