--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -124,9 +124,10 @@ main{
 
         &-img{
             width: 100%;
-            height: 65%;
-            background-color: beige;
-            border-radius: 10px;
+            height: 70%;
+            background-color: rgb(201, 201, 201);
+            border-top-right-radius: 10px;
+            border-top-left-radius: 10px;
 
             img{
                 width: 100%;
@@ -140,7 +141,7 @@ main{
             @include flexColumn;
             justify-content: space-between;
             width: 100%;
-            height: 35%;
+            height: 30%;
             color: black;
 
             h3{
