--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,10 +1,10 @@
 main{
     min-height: calc(100vh - 60px);
     position: relative;
-    background-image: url('../imgs/home-back-img.jpg');
-    // background-repeat: no-repeat;
-    // background-size: cover;
-    // background-position: center center;
+    background-image: url('/imgs/home-back-img.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
     @include flexCenter;
 
     .inner-main{
